--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,20 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Dojo ionic :D
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-item>
+    <ion-label floating>Username</ion-label>
+    <ion-input type="text" value="" [ng-model]="username"></ion-input>
+  </ion-item>
+  <button ion-button block color="secondary" round icon-left (click)="pressmebaby(username)">
+    <ion-icon name="aperture"></ion-icon>
+    PRESS ME, BABY
+  </button>
+  <div>{{ informacion.login }}</div>
+  <img [src]="informacion.avatar_url" alt="">
 </ion-content>
